<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ToDoApps</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- Splash Activity -->
    <string name="splash_title">ToDoApps</string>

    <!-- Create Task Asctivity -->
    <string name="cta_verb">VERBO</string>
    <string name="cta_object">OBJETO</string>
    <string name="cta_data_time">FECHA | HORA</string>
    <string name="cta_today">HOY</string>
    <string name="cta_morning">MAÑANA</string>
    <string name="cta_custom">OTRO</string>
    <string name="cta_hint_verb_name">Verbo</string>
    <string name="cta_hint_object_name">Objeto</string>
    <string name="register_verb">Registrar verbo</string>
    <string name="register_object">Registrar Objeto</string>

    <!-- ListTasck -->
    <string name="options">Esta tarea será ...</string>


</resources>
