<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="4dp">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:text="@string/cta_today"
                    android:background="@drawable/selector_act_bottom"
                    android:layout_margin="5dp" />

            </LinearLayout>

            <TextView
                android:id="@+id/textViewVerb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cta_verb"
                android:textSize="22sp"
                android:textStyle="bold"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                android:paddingLeft="15dp"
                android:background="@color/cta_silver"/>


            <HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tool"
                android:layout_width="match_parent"
                android:layout_height="154dp"
                android:fillViewport="true">

                <LinearLayout
                    android:id="@+id/linearLayoutVerb"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="2dp">

                </LinearLayout>

            </HorizontalScrollView>

            <TextView
                android:id="@+id/textViewObject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cta_object"
                android:textSize="22sp"
                android:textStyle="bold"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                android:paddingLeft="15dp"
                android:background="@color/cta_silver"/>

            <HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tool"
                android:layout_width="match_parent"
                android:layout_height="154dp"
                android:fillViewport="true">

                <LinearLayout
                    android:id="@+id/linearLayoutObject"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="2dp">

                </LinearLayout>

            </HorizontalScrollView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cta_data_time"
                android:textSize="22sp"
                android:textStyle="bold"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                android:paddingLeft="15dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:id="@+id/viewPagerDateTime"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_gravity="center">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="140dp">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="36dp"
                        android:text="@string/cta_today"
                        android:background="@drawable/selector_act_bottom"
                        android:layout_margin="5dp" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="36dp"
                        android:text="@string/cta_morning"
                        android:background="@drawable/selector_act_bottom"
                        android:layout_margin="5dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="140dp">

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <ImageButton
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:src="@drawable/ic_add_task"
        android:background="@drawable/selector_act_add"
        android:layout_gravity="right|bottom"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="10dp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|top">

    </LinearLayout>

</FrameLayout>
